@@ -101,6 +101,7 @@ function __autoload($className) {
 		'ImagePage' => 'includes/ImagePage.php',
 		'ImageHistoryList' => 'includes/ImagePage.php',
 		'ImageRemote' => 'includes/ImageRemote.php',
+		'FileRevertForm' => 'includes/FileRevertForm.php',
 		'Job' => 'includes/JobQueue.php',
 		'EmaillingJob' => 'includes/EmaillingJob.php',
 		'EnotifNotifyJob' => 'includes/EnotifNotifyJob.php',
