@@ -877,6 +877,16 @@ $wgMessageStructure = array(
 		'imagelist_description',
 		'imagelist_search_for',
 	),
+	'filerevert' => array(
+		'filerevert',
+		'filerevert-legend',
+		'filerevert-intro',
+		'filerevert-comment',
+		'filerevert-defaultcomment',
+		'filerevert-submit',
+		'filerevert-success',
+		'filerevert-badversion',
+	),
 	'mimesearch' => array(
 		'mimesearch',
 		'mimesearch-summary',
@@ -1155,7 +1165,6 @@ $wgMessageStructure = array(
 		'deletionlog',
 		'reverted',
 		'deletecomment',
-		'imagereverted',
 		'rollback',
 		'rollback_short',
 		'rollbacklink',
